--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,14 +13,16 @@ body {
 
 /*----------------------Nav */
 .navbar {
-    
+    background-color: #fff;
+    box-shadow: 0px 5px 8px rgba(0,0,0,.2);
 }
 
 .navmenu {
     float: right;
     list-style: none;
     overflow: hidden;
-    padding-top: 18px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .navitem {
@@ -38,5 +40,5 @@ body {
     left: 0;
     right: 0;
     height: 40px;
-    padding: 15px 0px 0px 15px
+    padding: 15px 5px 5px 15px
 }
