--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,13 +15,13 @@ body {
 .navbar {
     background-color: #fff;
     box-shadow: 0px 5px 8px rgba(0,0,0,.2);
+    display: block;
 }
 
 .navmenu {
     float: right;
     list-style: none;
-    overflow: hidden;
-    padding-top: 15px;
+    padding-top: 25px;
     padding-bottom: 15px;
 }
 
@@ -39,8 +39,8 @@ body {
 .logo {
     left: 0;
     right: 0;
-    height: 60px;
-    padding: 15px 5px 5px 15px
+    height: 70px;
+    padding: 15px 5px 5px 15px;
 }
 
 /*----------------------Cocktail Search */
@@ -52,17 +52,28 @@ body {
 /*----------------------Footer */
 
 footer {
-    background-color: #000;
-    color: #fff;
+    background-color: #fff;
+    color: #000;
+    text-align: center;
+    box-shadow: 0px -5px 8px rgba(0,0,0,.2);
+}
+
+.footer-logo {
+    height: 75px;
+    padding: 15px 5px 5px 25px;
+    float: left;
 }
 
 .socials {
     font-size: 35px;
-    padding: 20px 0;
+    padding: 18px 0;
+    margin: 0;
+    
 }
 
 .socials li a i {
-    color: #fff;
+    color: #000;
+    padding: 0 15px;
     
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
@@ -71,5 +82,10 @@ footer {
 }
 
 .socials li a i:hover {
-    color: #f5ab92;
+    color: #419177;
+}
+
+.footer-item {
+    float: right;
+    padding: 40px 25px 5px 5px;
 }
