--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 /*---------------------General */
 body {
-    font-family: Poppins, sans-serif;
+    font-family: "Poppins", sans-serif;
     color: #000;
 }
 
@@ -15,14 +15,13 @@ body {
 .navbar {
     background-color: #fff;
     box-shadow: 0px 5px 8px rgba(0,0,0,.2);
-    display: block;
+    width: 100%;
 }
 
 .navmenu {
-    float: right;
     list-style: none;
-    padding-top: 25px;
-    padding-bottom: 15px;
+    padding-top: 35px;
+    padding-bottom: 8px;
 }
 
 .navitem {
@@ -40,13 +39,23 @@ body {
     left: 0;
     right: 0;
     height: 70px;
-    padding: 15px 5px 5px 15px;
+    padding: 5px 2px 2px 15px;
+}
+
+.navbar-collapse {
+    text-align: center;
+}
+
+.navbar-toggler {
+    color: #000;
+    border: none;
 }
 
 /*----------------------Cocktail Search */
 .searchheader {
     text-align: center;
     padding-top: 50px;
+    font-weight: 700;
 }
 
 /*----------------------Footer */
@@ -60,7 +69,7 @@ footer {
 
 .footer-logo {
     height: 75px;
-    padding: 15px 5px 5px 25px;
+    padding: 15px 2px 2px 25px;
     float: left;
 }
 
@@ -87,5 +96,6 @@ footer {
 
 .footer-item {
     float: right;
-    padding: 40px 25px 5px 5px;
+    padding: 30px 25px 2px 2px;
+    font-size: 12px;
 }
