--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,13 @@ body {
 
 .section-header {
     font-family: "Poppins", sans-serif;
+    color: #fff;
     text-align: center;
     padding-top: 20px;
     font-weight: 550;
     padding-bottom: 15px;
     line-height: 1.5;
+    z-index: 100;
 }
 
 /*----------------------Nav */
