--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,10 +67,19 @@ body {
 }
 
 /*----------------------Cocktail Search */
+
+.cocktail-form {
+    margin: auto;
+    max-width: 900px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+}
+
 .search-button {
-    text-align: center;
     padding: 10px 20px 10px 20px;
-    margin-top: 30px;
     font-size: 18px;
     font-weight: 300;
     background-color: #7fadc3;
@@ -85,28 +94,91 @@ body {
     background-color: #7fadc3;
 }
 
-.cocktail {
-    margin: 20px;
-    padding-top: 30px;
-    padding-bottom: 50px;
+.cocktail-search {
+    padding: 10px 20px 10px 20px;
+    width: 400px;
+    font-size: 18px;
+    font-weight: 200;
+    background-color: #fefefe;
+    border-radius: 6px;
 }
 
-.cocktail-image {
-    padding: 20px;
-    width: 100%;
+.error {
+    border: 3px solid rgb(255, 125, 4);
+}
+
+.error-message {
+    width: 80%;
+    text-align: left;
+    font-size: 16px;
+    color: rgb(255, 255, 255);
+    padding: 5px 5px;
+    height: 0;
+    display: none;
+    overflow: hidden;
+    transition: all 0.2s ease-in-out;
+}
+
+.cocktail-list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.cocktail-thumb {
+    cursor: pointer;
+    position: relative;
+    height: 180px;
+    width: 180px;
     text-align: center;
 }
 
+.thumb-image {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 4px #fff solid;
+    border-radius: 2px;
+    margin-bottom: 5px;
+}
+
+.cocktail-name {
+    cursor: pointer;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    color: #fff;
+    background-color: rgb(43, 43, 43, 0.7);
+    border-radius: 8px;
+    padding: 0px 5px 0px 5px;
+    margin-left: 8px;
+    display: flex;
+}
+
+/* createCocktail */
 .cocktail-result {
     font-weight: 250;
+    padding-top: 40px;
+}
+
+.cocktail-image {
+    padding: 10px;
+    width: 100%;
+    text-align: center;
 }
 
 .cocktail-info {
     background-color: rgba(255, 255, 255, 0.7); 
     border-radius: 7px;
+    margin: 10px;
 }
 
-.cocktail-name {
+.cocktail-h {
     padding-top: 20px;
 }
 
@@ -212,25 +284,24 @@ footer {
     background-color: #fff;
     color: #000;
     text-align: center;
-    box-shadow: 0px -5px 8px rgba(0,0,0,.2);
 }
 
 .footer-logo {
     height: 75px;
-    padding: 15px 2px 2px 25px;
+    padding: 10px 2px 2px 25px;
     float: left;
 }
 
 .socials {
     font-size: 35px;
-    padding: 18px 0;
+    padding: 10px 0;
     margin: 0;
     
 }
 
 .socials li a i {
     color: #000;
-    padding: 0 15px;
+    padding: 0 10px;
     
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
@@ -244,7 +315,7 @@ footer {
 
 .footer-item {
     float: right;
-    padding: 30px 25px 2px 2px;
+    padding: 20px 25px 2px 2px;
     font-size: 12px;
 }
 
@@ -253,10 +324,29 @@ footer {
     .info-image {
         height: 50vh;
     }
+    .cocktail-search {
+        width: 300px;
+    }
 }
 
 @media screen and (max-width: 440px) {
     .info-image {
         height: 150vw;
     }
+    .cocktail-list {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    .submit {
+        display: grid;
+    }
+    #search-button {
+        width: fit-content;
+        margin: 20px auto 20px auto;
+    }
 }
+
+
