--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,6 +143,7 @@ body {
 
 .cocktail-list {
     display: grid;
+    cursor: pointer;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
     margin-top: 20px;
@@ -261,7 +262,7 @@ body {
     display: table-cell;
 }
 
-.random-section {
+/* .random-section {
     border: 2px solid rgb(127, 173, 195, 0.5);
     box-shadow: 0 0 10px 5px rgb(127, 173, 195, 0.5);
     margin: 40px auto;
@@ -274,7 +275,7 @@ body {
 }
 
 .random-section h3 {
-    font-weight: 300;
+    font-weight: 300; */
 }
 
 .search-image {
