--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,8 +275,8 @@ body {
 }
 
 .random-section h3 {
-    font-weight: 300; */
-}
+    font-weight: 300;
+} */
 
 .search-image {
     background-size: cover;
