Final spell check and formatting of README

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,6 +368,10 @@ body {
     position: relative;
 }
 
+#submit-button {
+    margin: 30px auto;
+}
+
 /*----------------------Footer */
 
 footer {
